@@ -4,6 +4,8 @@ v2.3.0 (XXX-XX-XX)
 * added AQL string functions `LTRIM`, `RTRIM`, `FIND_FIRST`, `FIND_LAST`, `SPLIT`, 
   `SUBSTITUTE`
 
+* added AQL functions `ASSEMBLE` and `VALUES`
+
 
 v2.3.0-beta2 (2014-11-08)
 -------------------------
